--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2-react-calendars": "^20.3.59",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.0",
+    "chart.js": "^4.0.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-calendar": "^4.0.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
